# thdl

./: .gitignore  LICENSE  setup.cfg
doc/: conf.py  index.rst  overview.rst
thdl/: main.py
thdl/check/: check.py  checker.py  clock.py  process.py  reset.py
thdl/generate/: enumeration.py
thdl/tests/check/: test_clock_freq.py  test_negative_reset.py  test_positive_reset.py  test_process_edge.py  test_rising_edge.py
thdl/tests/generate/: test_enumeration.py
