[metadata]
name = thdl
version = attr: thdl.main.VERSION
description = thdl
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = GPL-3.0
keywords =
    VHDL
    HDL
    RTL
    FPGA
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GPL-3.0
author = Michał Kruszewski
author_email = mkru@protonmail.com
url = https://github.com/m-kru/thdl

[options]
packages = find:

[options.entry_points]
console_scripts =
    thdl = thdl.main:main
